--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "author": "samtgarson@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-latest": "^6.16.0",
-    "micro": "^6.1.0"
+    "instagram-node-lib": "^0.1.1",
+    "micro": "^6.1.0",
+    "url-parse": "^1.1.7"
   },
   "devDependencies": {
     "ava": "^0.17.0",
@@ -20,6 +23,7 @@
     "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.2",
+    "nock-vcr-recorder": "^0.1.5",
     "nodemon": "^1.11.0",
     "ora": "^1.1.0",
     "request": "^2.79.0",
@@ -33,7 +37,9 @@
     "start": "micro .",
     "dev": "node build --watch",
     "build": "node build",
-    "test": "ava && xo"
+    "test": "ava && xo",
+    "test:watch": "ava --watch",
+    "test:lint": "xo"
   },
   "xo": {
     "ignores": [
@@ -64,7 +70,8 @@
       "test/**/*.test.js"
     ],
     "source": [
-      "src/**/*.js"
+      "src/**/*.js",
+      "lib/**/*.js"
     ],
     "require": [
       "babel-register",
