--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "babel-preset-latest": "^6.16.0",
     "instagram-node-lib": "^0.1.1",
     "micro": "^6.1.0",
+    "retell": "^1.1.1",
     "url-parse": "^1.1.7"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
+    "ava": "^0.19.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
@@ -23,7 +24,6 @@
     "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.5",
-    "nock-vcr-recorder": "^0.1.5",
     "nodemon": "^1.11.0",
     "ora": "^1.1.0",
     "request": "^2.79.0",
