Switch to use ramda

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-latest": "^6.16.0",
     "instagram-node-lib": "^0.1.1",
     "micro": "^6.1.0",
+    "ramda": "^0.23.0",
     "retell": "^1.1.1",
     "url-parse": "^1.1.7"
   },
