--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     ],
     "extends": "samtgarson",
     "rules": {
-      "no-console": 0
+      "no-console": 0,
+      "no-underscore-dangle": 0
     },
     "overrides": [
       {
