--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-preset-latest": "^6.16.0",
     "micro": "^6.1.0",
     "ramda": "^0.23.0",
     "retell": "^1.1.1",
@@ -19,11 +18,14 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.5",
+    "flow-bin": "^0.44.0",
     "nodemon": "^1.11.0",
     "ora": "^1.1.0",
     "request": "^2.79.0",
@@ -64,7 +66,8 @@
   "babel": {
     "presets": [
       "latest",
-      "stage-2"
+      "stage-2",
+      "flow"
     ]
   },
   "ava": {
