--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "ava": "^0.19.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.20.0",
     "babel-preset-flow": "^6.23.0",
@@ -25,6 +26,7 @@
     "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.5",
+    "eslint-plugin-flowtype": "^2.30.4",
     "flow-bin": "^0.44.0",
     "nodemon": "^1.11.0",
     "ora": "^1.1.0",
@@ -39,7 +41,7 @@
     "start": "micro",
     "dev": "node ./build/ --watch",
     "build": "node ./build/index.js",
-    "test": "ava && xo",
+    "test": "ava && xo && flow check",
     "test:spec": "ava",
     "test:lint": "xo"
   },
@@ -47,7 +49,13 @@
     "ignores": [
       "index.js"
     ],
-    "extends": "samtgarson",
+    "extends": [
+      "samtgarson",
+      "plugin:flowtype/recommended"
+    ],
+    "plugins": [
+      "flowtype"
+    ],
     "rules": {
       "no-console": 0,
       "no-underscore-dangle": 0,
