--- a/package.json
+++ b/package.json
@@ -106,7 +106,9 @@
   "now": {
     "alias": "engagement",
     "env": {
-      "INSTAGRAM_TOKEN": "@instagram_token"
+      "INSTAGRAM_CLIENT_ID": "@instagram_client_id",
+      "INSTAGRAM_CLIENT_SECRET": "@instagram_client_secret",
+      "SECRET_KEY": "@secret_key"
     },
     "private": false
   }
